--- a/Project1.html
+++ b/Project1.html
@@ -14,7 +14,7 @@
   </video>
   <section class="main-section">
     <nav>
-      <h1 data-aos="zoom-in" data-aos-duration="1000"><span style="color: #4acfee;">Pro</span>Coder09</h1>
+      <h1 data-aos="zoom-in" data-aos-duration="1000"><span style="color: #4acfee;">Abd</span>rahman</h1>
       <ul>
         <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a class="active" href="#">Home </a></li>
         <li data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#">About</a></li>
